--- a/.tools/test/stacks/config/targets.yaml
+++ b/.tools/test/stacks/config/targets.yaml
@@ -1,7 +1,7 @@
 cpp:
   account_id: "770244195820"
   status: "enabled"
-  vcpu: "4"
+  vcpus: "4"
   memory: "16384"
 dotnetv3:
   account_id: "441997275833"
