--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -24,7 +24,7 @@ bedrock-runtime_Hello:
   services:
     bedrock-runtime: {InvokeModel}
 
-# Amazon Titan - Embeddings
+# Amazon Titan Text Embeddings G1
 bedrock-runtime_TitanTextEmbeddingsG1_InvokeModel:
   title: Invoke Amazon Titan Text Embeddings G1 on &BR;
   title_abbrev: "Amazon Titan Text Embeddings G1"
@@ -58,6 +58,7 @@ bedrock-runtime_TitanTextEmbeddingsG1_InvokeModel:
   services:
     bedrock-runtime: {InvokeModel}
 
+# Amazon Titan Text Embeddings V2
 bedrock-runtime_TitanTextEmbeddingsV2_InvokeModel:
   title: Invoke Amazon Titan Text Embeddings V2 on &BR;
   title_abbrev: "Amazon Titan Text Embeddings V2"
@@ -88,6 +89,57 @@ bedrock-runtime_TitanTextEmbeddingsV2_InvokeModel:
             - description: Invoke Titan Text Embeddings V2 configuring the number of dimensions and normalization.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModel_TitanTextEmbeddingsG1_AdditionalFields
+  services:
+    bedrock-runtime: {InvokeModel}
+
+# Amazon Titan Text G1
+bedrock-runtime_TitanTextG1_InvokeModel:
+  title: Invoke Amazon Titan Text G1 on &BR;
+  title_abbrev: "Amazon Titan Text G1"
+  synopsis_list:
+    - Get started sending your first prompt to Amazon Titan Text and printing the response.
+    - Add a system prompt and additional inference parameters to influence how the model responds.
+    - Enable chat-like, multi-turn conversations, using a conversation history.
+  category: Invoke model examples
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Send your first prompt to Amazon Titan Text.
+              snippet_tags:
+                - bedrock-runtime.java2.InvokeModel_TitanTextG1_Quickstart
+            - description: Invoke Titan Text with a system prompt and additional inference parameters.
+              snippet_tags:
+                - bedrock-runtime.java2.InvokeModel_TitanTextG1_SingleMessage
+            - description: Create a chat-like experience with Titan Text, using a conversation history.
+              snippet_tags:
+                - bedrock-runtime.java2.InvokeModel_TitanTextG1_Conversation
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Send your first prompt to Amazon Titan Text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/amazon_titan/titan_text.js
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          excerpts:
+            - description: Send your first prompt to Amazon Titan Text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanTextG1
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Send your first prompt to Amazon Titan Text.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeTitanText
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -141,40 +193,6 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForImageGeneration:
             - description: Asynchronously invoke the Amazon Titan Image Generator G1 foundation model to generate images.
               snippet_tags:
                 - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanImageGeneratorG1
-  services:
-    bedrock-runtime: {InvokeModel}
-
-bedrock-runtime_InvokeAmazonTitanForTextGeneration:
-  title: Invoke Amazon Titan Text G1 on &BR; for text generation
-  title_abbrev: 'Amazon Titan: Text generation'
-  synopsis: invoke Amazon Titan Text G1 on &BR; for text generation.
-  category: Invoke model examples
-  languages:
-    JavaScript:
-      versions:
-        - sdk_version: 3
-          github: javascriptv3/example_code/bedrock-runtime
-          excerpts:
-            - description: Invoke the Amazon Titan Text G1 foundation model to generate text.
-              snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/models/amazon_titan/titan_text.js
-    .NET:
-      versions:
-        - sdk_version: 3
-          github: dotnetv3/Bedrock-runtime
-          sdkguide:
-          excerpts:
-            - description: Asynchronously invoke the Amazon Titan Text G1 foundation model to generate text.
-              snippet_tags:
-                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanTextG1
-    Go:
-      versions:
-        - sdk_version: 2
-          github: gov2/bedrock-runtime
-          excerpts:
-            - description: Invoke the Amazon Titan Text G1 foundation model to generate text.
-              snippet_tags:
-                - gov2.bedrock-runtime.InvokeTitanText
   services:
     bedrock-runtime: {InvokeModel}
 
