--- a/.tools/test/stacks/config/targets.yaml
+++ b/.tools/test/stacks/config/targets.yaml
@@ -30,7 +30,7 @@ ruby:
 rustv1:
   account_id: "050288538048"
   status: "enabled"
-sap-abap:
+sapabap:
   account_id: "099736152523"
   status: "enabled"
 swift:
