--- a/javascriptv3/example_code/iam/package.json
+++ b/javascriptv3/example_code/iam/package.json
@@ -12,5 +12,8 @@
     "@aws-sdk/client-iam": "^3.303.0",
     "@aws-sdk/client-s3": "^3.303.0",
     "@aws-sdk/client-sts": "^3.303.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
