--- a/javascriptv3/example_code/cross-services/feedback-sentiment-analyzer/TranslateText/package.json
+++ b/javascriptv3/example_code/cross-services/feedback-sentiment-analyzer/TranslateText/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-translate": "^3.388.0",
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "rollup": "^3.28.0"
+    "rollup": "^3.28.0",
+    "vitest": "^1.6.0"
   }
 }
