--- a/javascriptv3/example_code/cross-services/transcribe-streaming-app/package.json
+++ b/javascriptv3/example_code/cross-services/transcribe-streaming-app/package.json
@@ -7,18 +7,19 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@aws-doc-sdk-examples/lib": "1.0.0",
     "@aws-sdk/client-cognito-identity": "^3.310.0",
     "@aws-sdk/client-comprehend": "^3.310.0",
     "@aws-sdk/client-ses": "^3.310.0",
     "@aws-sdk/client-transcribe-streaming": "^3.310.0",
     "@aws-sdk/client-translate": "^3.310.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.310.0",
-    "@aws-doc-sdk-examples/lib": "1.0.0",
     "buffer": "^6.0.3",
     "microphone-stream": "^6.0.1",
     "process": "^0.11.10"
   },
   "devDependencies": {
+    "vitest": "^1.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
