--- a/javascriptv3/example_code/libs/package.json
+++ b/javascriptv3/example_code/libs/package.json
@@ -14,5 +14,8 @@
     "archiver": "^5.3.1",
     "fast-word-wrap": "^1.1.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
