--- a/javascriptv3/example_code/polly/package.json
+++ b/javascriptv3/example_code/polly/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/polly-request-presigner": "^3.32.0"
   },
   "devDependencies": {
+    "vitest": "^1.6.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
