--- a/javascriptv3/example_code/web/s3/list-objects/package.json
+++ b/javascriptv3/example_code/web/s3/list-objects/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^1.6.0"
   }
 }
