--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -2,8 +2,6 @@ name: Lint Ruby
 on:
   pull_request:
   workflow_dispatch:
-permissions:
-  contents: read
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -11,5 +9,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: RuboCop Linter
         uses: andrewmcodes/rubocop-linter-action@v3.3.0
-        with:
-          action_config_path: ".github/linters/.ruby-lint.yml"
+#        with:
+#          action_config_path: ".github/linters/.ruby-lint.yml"
