--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,7 +1,7 @@
 name: Lint Ruby
-on:
-  pull_request:
-  workflow_dispatch:
+
+on: [push, pull_request]
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -9,5 +9,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: RuboCop Linter
         uses: andrewmcodes/rubocop-linter-action@v3.3.0
-#        with:
-#          action_config_path: ".github/linters/.ruby-lint.yml"
+        with:
+          action_config_path: ".github/linters/.ruby-lint.yml"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
