--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,15 +1,26 @@
-name: Lint Ruby
+name: RuboCop Linting
 
-on: [push, pull_request]
+on:
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-  lint:
+  rubocop:
+    name: RuboCop
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-      - name: RuboCop Linter
-        uses: andrewmcodes/rubocop-linter-action@v3.3.0
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          action_config_path: "../linters/.ruby-lint.yml"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ruby-version: 3.0
+
+      - name: Install dependencies
+        run: |
+          gem install rubocop
+
+      - name: Run RuboCop
+        run: rubocop
