--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,4 +23,4 @@ jobs:
           gem install rubocop
 
       - name: Run RuboCop
-        run: rubocop
+        run: rubocop --config .github/linters/.ruby-lint.yml
