--- a/.github/linters/.ruby-lint.yml
+++ b/.github/linters/.ruby-lint.yml
@@ -3,9 +3,9 @@
 # Rubocop Config file #
 #######################
 
-inherit_gem:
-  rubocop-github:
-    - config/default.yml
+#inherit_gem:
+#  rubocop-github:
+#    - config/default.yml
 Metrics/MethodLength:
   Max: 25
 Metrics/AbcSize:
