--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -2,8 +2,6 @@ name: RuboCop Linting
 
 on:
   pull_request:
-    paths:
-      - '**/*.rb'
   workflow_dispatch:
 
 jobs:
@@ -15,6 +13,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+          files: "ruby/**/*.rb"
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -25,4 +29,7 @@ jobs:
           gem install rubocop
 
       - name: Run RuboCop
-        run: rubocop --config .github/linters/.ruby-lint.yml .
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          changed_files=(${{steps.changed-files.outputs.all_changed_files}})
+          rubocop --config .github/linters/.ruby-lint.yml "${changed_files[@]}"     
