Initial review commit for redshift - go

--- a/.doc_gen/metadata/redshift_metadata.yaml
+++ b/.doc_gen/metadata/redshift_metadata.yaml
@@ -5,6 +5,14 @@ redshift_Hello:
   synopsis: get started using &RS;.
   category: Hello
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.Hello
     Java:
       versions:
         - sdk_version: 2
@@ -39,6 +47,14 @@ redshift_ListDatabases:
     redshift: {ListDatabases}    
 redshift_CreateCluster:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.CreateCluster
     Kotlin:
       versions:
         - sdk_version: 1
@@ -86,6 +102,14 @@ redshift_CreateCluster:
     redshift: {CreateCluster}
 redshift_DeleteCluster:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.DeleteCluster
     Kotlin:
       versions:
         - sdk_version: 1
@@ -133,6 +157,14 @@ redshift_DeleteCluster:
     redshift: {DeleteCluster}
 redshift_DescribeClusters:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.DescribeClusters
     Kotlin:
       versions:
         - sdk_version: 1
@@ -180,6 +212,14 @@ redshift_DescribeClusters:
     redshift: {DescribeClusters}
 redshift_ModifyCluster:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.ModifyCluster
     Kotlin:
       versions:
         - sdk_version: 1
@@ -227,6 +267,14 @@ redshift_ModifyCluster:
     redshift: {ModifyCluster}
 redshift_DescribeStatement:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.DescribeStatement
     Java:
       versions:
         - sdk_version: 2
@@ -253,6 +301,14 @@ redshift_DescribeStatement:
     redshift: {DescribeStatement}
 redshift_GetStatementResult:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.GetStatementResult
     Java:
       versions:
         - sdk_version: 2
@@ -279,6 +335,14 @@ redshift_GetStatementResult:
     redshift: {GetStatementResult}
 redshift_ExecuteStatement:
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.CreateTable
     Java:
       versions:
         - sdk_version: 2
@@ -300,6 +364,14 @@ redshift_Scenario:
   synopsis: learn core operations for &RS; using an &AWS;.
   category: Basics
   languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/redshift
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.redshift.BasicsScenario
     Java:
       versions:
         - sdk_version: 2
