--- a/.doc_gen/metadata/sesv2_metadata.yaml
+++ b/.doc_gen/metadata/sesv2_metadata.yaml
@@ -1,5 +1,13 @@
 sesv2_CreateContactList:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.CreateContactList
     Rust:
       versions:
         - sdk_version: 1
@@ -30,6 +38,14 @@ sesv2_CreateContactList:
     sesv2: {CreateContactList}
 sesv2_CreateContact:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.CreateContact
     Rust:
       versions:
         - sdk_version: 1
@@ -84,6 +100,14 @@ sesv2_ListContactLists:
     sesv2: {ListContactLists}
 sesv2_ListContacts:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.ListContacts
     Rust:
       versions:
         - sdk_version: 1
@@ -114,6 +138,14 @@ sesv2_ListContacts:
     sesv2: {ListContacts}
 sesv2_SendEmail:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.SendEmail
     Java:
       versions:
         - sdk_version: 2
@@ -155,6 +187,43 @@ sesv2_SendEmail:
                 - python.example_code.sesv2.SESv2Workflow.main
                 - python.example_code.sesv2.SESv2Workflow.decl
                 - python.example_code.sesv2.SendEmail.simple
+  services:
+    sesv2: {SendEmail}
+sesv2_SendEmail_Template:
+  title: Send a templated &SESv2; email using an &AWS; SDK
+  title_abbrev: Send a templated email
+  synopsis: send a templated &SESv2; email.
+  category:
+  languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.SendEmail
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/ses
+          excerpts:
+            - description: Sends a message.
+              snippet_tags:
+                - sesv2.java2.newsletter.SendEmail.template
+    Rust:
+      versions:
+        - sdk_version: 1
+          github: rustv1/examples/ses
+          excerpts:
+            - description: Sends a message to all members of the contact list.
+              snippet_tags:
+                - sesv2.rust.send-email.template
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/sesv2
+          excerpts:
             - description: Sends a message to all members of the contact list using a template.
               snippet_tags:
                 - python.example_code.sesv2.SESv2Workflow.main
@@ -164,6 +233,14 @@ sesv2_SendEmail:
     sesv2: {SendEmail}
 sesv2_CreateEmailIdentity:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.CreateEmailIdentity
     Java:
       versions:
         - sdk_version: 2
@@ -194,6 +271,14 @@ sesv2_CreateEmailIdentity:
     sesv2: {CreateEmailIdentity}
 sesv2_CreateEmailTemplate:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.CreateEmailTemplate
     Java:
       versions:
         - sdk_version: 2
@@ -224,6 +309,14 @@ sesv2_CreateEmailTemplate:
     sesv2: {CreateEmailTemplate}
 sesv2_DeleteContactList:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.DeleteContactList
     Java:
       versions:
         - sdk_version: 2
@@ -254,6 +347,14 @@ sesv2_DeleteContactList:
     sesv2: {DeleteContactList}
 sesv2_DeleteEmailIdentity:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.DeleteEmailIdentity
     Java:
       versions:
         - sdk_version: 2
@@ -284,6 +385,14 @@ sesv2_DeleteEmailIdentity:
     sesv2: {DeleteEmailIdentity}
 sesv2_DeleteEmailTemplate:
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description:
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper.DeleteEmailTemplate
     Java:
       versions:
         - sdk_version: 2
@@ -318,6 +427,17 @@ sesv2_NewsletterWorkflow:
   synopsis: '&SESv2; newsletter workflow.'
   category: Scenarios
   languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/SESv2
+          excerpts:
+            - description: Run the workflow.
+              snippet_tags:
+                - SESWorkflow.dotnetv3.NewsletterWorkflow
+            - description: Wrapper for service operations.
+              snippet_tags:
+                - SESWorkflow.dotnetv3.SESv2Wrapper
     Java:
       versions:
         - sdk_version: 2
