fixed a SOS tag issue

--- a/.doc_gen/metadata/sfn_metadata.yaml
+++ b/.doc_gen/metadata/sfn_metadata.yaml
@@ -61,7 +61,7 @@ sfn_CreateStateMachine:
           excerpts:
             - description:
               snippet_tags:
-                - stepfunctions.java2.create_machine.main
+                - stepfunctions.kotlin.create_machine.main
     Java:
       versions:
         - sdk_version: 2
