--- a/.doc_gen/metadata/kms_metadata.yaml
+++ b/.doc_gen/metadata/kms_metadata.yaml
@@ -1,4 +1,21 @@
 # zexi 0.4.0
+kms_Hello:
+  title: Hello &kms-key;
+  title_abbrev: Hello &kms-key;
+  synopsis: get started using &kms-key;.
+  category: Hello
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/kms
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - kms.java2_list_keys.main
+  services:
+    kms: {listKeysPaginator}
 kms_CreateKey:
   languages:
     Kotlin:
