--- a/.doc_gen/metadata/kms_metadata.yaml
+++ b/.doc_gen/metadata/kms_metadata.yaml
@@ -701,16 +701,27 @@ kms_Scenario_KeyEncryption:
   services:
     kms: {Encrypt, Decrypt, ReEncrypt}
 kms_Scenario_KeyManagement:
-  title: Manage &kms-keys-long; using an &AWS; SDK
+  title: Getting started with &kms-keys-long; using an &AWS; SDK
   title_abbrev: Manage keys
   synopsis_list:
     - Create a &kms-key;.
     - List &kms-keys; for your account and get details about them.
     - Enable and disable &kms-keys;.
     - Generate a symmetric data key that can be used for client-side encryption.
+    - Generate an asymmetric key used to digitally sign data.
+    - Tag keys.
     - Delete &kms-keys;.
   category: Scenarios
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/kms
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - kms.java2_scenario.main
     Python:
       versions:
         - sdk_version: 3
@@ -721,4 +732,4 @@ kms_Scenario_KeyManagement:
               snippet_tags:
                 - python.example_code.kms.Scenario_KeyManagement
   services:
-    kms: {CreateKey, ListKeys, DescribeKey, GenerateDataKey, EnableKey, DisableKey, ScheduleKeyDeletion}
+    kms: {CreateKey, ListKeys, DescribeKey, GenerateDataKey, EnableKey, Sign, DisableKey, ScheduleKeyDeletion}
