--- a/python/example_code/bedrock-runtime/requirements.txt
+++ b/python/example_code/bedrock-runtime/requirements.txt
@@ -1,11 +1,12 @@
-boto3==1.34.98
-botocore==1.34.98
+boto3==1.34.112
+botocore==1.34.112
 colorama==0.4.6
 iniconfig==2.0.0
 jmespath==1.0.1
+numpy==1.26.4
 packaging==24.0
 pluggy==1.5.0
-pytest==8.1.1
+pytest==8.2.1
 pytest-asyncio==0.23.6
 python-dateutil==2.9.0.post0
 s3transfer==0.10.1
