--- a/php/composer.json
+++ b/php/composer.json
@@ -6,7 +6,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "php-mock/php-mock-phpunit": "*",
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-0": {
